# Vehicle-sensing-system

catkin_ws/: data_acquisition.sh  data_play.sh  record.launch
catkin_ws/devel/: .catkin
catkin_ws/devel/include/can_msgs/: Frame.h
catkin_ws/devel/include/esr_msgs/: Measurement.h  Track.h
catkin_ws/devel/include/rslidar_msgs/: rslidarPacket.h
catkin_ws/devel/include/tf/: FrameGraphRequest.h  FrameGraphResponse.h  tfMessage.h
catkin_ws/devel/include/timesync/: TimesyncDebug.h
catkin_ws/devel/lib/lpms_imu/: lpms_imu_node
catkin_ws/devel/lib/pkgconfig/: can_msgs.pc  canfd_msgs.pc  esr_msgs.pc  lpms_imu.pc  qianradar.pc  rslidar_driver.pc  rslidar_msgs.pc  serial.pc  serial_port.pc  socketcan_driver.pc  socketcan_interface.pc  timesync.pc  usb_cam.pc  zuoyouradar.pc
catkin_ws/devel/lib/qianradar/: qianradar
catkin_ws/devel/lib/rslidar_driver/: rslidar_node
catkin_ws/devel/lib/rslidar_pointcloud/: cloud_node
catkin_ws/devel/lib/serial/: serial_example
catkin_ws/devel/lib/serial_port/: serial_port_node
catkin_ws/devel/lib/socketcan_driver/: socketcan_to_topic_node
catkin_ws/devel/lib/socketcan_interface/: socketcan_bcm  socketcan_dump
catkin_ws/devel/lib/timesync/: example
catkin_ws/devel/lib/usb_cam/: usb_cam_ctrl_node  usb_cam_node
catkin_ws/devel/lib/zuoyouradar/: zuoyouradar
catkin_ws/devel/share/can_msgs/cmake/: can_msgs-msg-paths.cmake  can_msgsConfig.cmake
catkin_ws/devel/share/canfd_msgs/cmake/: canfd_msgs-msg-extras.cmake  canfd_msgs-msg-paths.cmake  canfd_msgsConfig.cmake
catkin_ws/devel/share/esr_msgs/cmake/: esr_msgs-msg-paths.cmake  esr_msgsConfig.cmake
catkin_ws/devel/share/lpms_imu/cmake/: lpms_imuConfig.cmake
catkin_ws/devel/share/qianradar/cmake/: qianradar-msg-paths.cmake  qianradarConfig.cmake
catkin_ws/devel/share/rslidar_driver/cmake/: rslidar_driverConfig.cmake
catkin_ws/devel/share/rslidar_msgs/cmake/: rslidar_msgs-msg-extras.cmake  rslidar_msgs-msg-paths.cmake  rslidar_msgsConfig.cmake
catkin_ws/devel/share/serial/cmake/: serialConfig.cmake
catkin_ws/devel/share/serial_port/cmake/: serial_port-msg-extras.cmake  serial_port-msg-paths.cmake  serial_portConfig.cmake
catkin_ws/devel/share/socketcan_driver/cmake/: socketcan_driverConfig.cmake
catkin_ws/devel/share/socketcan_interface/cmake/: socketcan_interfaceConfig.cmake
catkin_ws/devel/share/timesync/cmake/: timesync-msg-extras.cmake  timesync-msg-paths.cmake  timesyncConfig.cmake
catkin_ws/devel/share/usb_cam/cmake/: usb_camConfig.cmake
catkin_ws/devel/share/zuoyouradar/cmake/: zuoyouradar-msg-paths.cmake  zuoyouradarConfig.cmake
catkin_ws/install/include/canfd_msgs/: Frame.h
catkin_ws/install/include/esr_msgs/: Status.h
catkin_ws/install/include/rslidar_msgs/: rslidarScan.h
catkin_ws/install/include/socketcan_driver/: socketcan_to_topic.h
catkin_ws/install/include/socketcan_interface/: asio_base.h  bcm.h  dummy.h  socketcan.h  string.h
catkin_ws/install/include/usb_cam/: usb_cam_info.h
catkin_ws/install/lib/lpms_imu/: lpms_imu_node
catkin_ws/install/lib/pkgconfig/: can_msgs.pc  canfd_msgs.pc  lpms_imu.pc  qianradar.pc  rslidar_msgs.pc  serial.pc  serial_port.pc  socketcan_driver.pc  usb_cam.pc  zuoyouradar.pc
catkin_ws/install/lib/qianradar/: qianradar
catkin_ws/install/lib/serial_port/: serial_port_node
catkin_ws/install/lib/socketcan_driver/: set_can_bitrate.sh  socketcan_to_topic_node
catkin_ws/install/lib/socketcan_interface/: socketcan_bcm  socketcan_dump
catkin_ws/install/lib/usb_cam/: generate_usb_cam_hannway_config.sh  usb_cam_node
catkin_ws/install/lib/zuoyouradar/: zuoyouradar
catkin_ws/install/share/canfd_msgs/cmake/: canfd_msgsConfig.cmake
catkin_ws/install/share/serial_port/: package.xml
catkin_ws/install/share/socketcan_driver/: package.xml
catkin_ws/src/Bieke/: RadarCanfdConfig.sh  generate_4d_launch_file.sh  generate_fcw_launch_file.sh  generate_g3mr2_launch_file.sh  gpal_4d_20190604.launch  gpal_fcw_20190604.launch  gpal_g3mr2_20190604.launch  set_can_bitrate.sh  show_4d_data.sh  show_fcw_data.sh  show_g3mr2_data.sh  start_calibrate_4d_radar_lidar.sh  start_calibrate_fcw_radar_lidar.sh  start_calibrate_g3mr2_radar_lidar.sh  start_dynamic_tf_broadcaster.sh  start_gpal_fcw_data_collection.sh  start_make.sh
catkin_ws/src/Bieke/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/src/Bieke/src/camera/usb_cam/: CMakeLists.txt
catkin_ws/src/Bieke/src/camera/usb_cam/debian/: changelog  control  rules
catkin_ws/src/Bieke/src/camera/usb_cam/include/usb_cam/: usb_cam.h
catkin_ws/src/Bieke/src/camera/usb_cam/launch/: camera_record.launch
catkin_ws/src/Bieke/src/camera/usb_cam/nodes/: usb_cam_ctrl_node.cc  usb_cam_node.cpp
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/: CMakeCache.txt
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/atomic_configure/: setup.sh
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/catkin_generated/installspace/: usb_cam.pc  usb_camConfig.cmake
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/devel/lib/pkgconfig/: usb_cam.pc
catkin_ws/src/Bieke/src/camera/usb_cam/obj-x86_64-linux-gnu/devel/share/usb_cam/cmake/: usb_camConfig.cmake
catkin_ws/src/Bieke/src/camera/usb_cam/src/: usb_cam.cpp  usb_cam_info.cc
catkin_ws/src/Bieke/src/can/socketcan_to_topic/canfd_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/Bieke/src/can/socketcan_to_topic/socketcan_driver/: CMakeLists.txt
catkin_ws/src/Bieke/src/can/socketcan_to_topic/socketcan_driver/scripts/: set_canfd_bitrate.sh
catkin_ws/src/Bieke/src/can/socketcan_to_topic/socketcan_driver/src/: socketcan_to_topic.cpp  socketcan_to_topic_node.cpp
catkin_ws/src/Bieke/src/qianradar/: CMakeLists.txt
catkin_ws/src/Bieke/src/qianradar/src/: qianradar.cpp
(+119 files in other folders)
