<?xml version="1.0"?>
<package format="2">
  <name>socketcan_driver</name>
  <version>0.0.2</version>
  <description>SocketCAN driver.</description>
  <maintainer email="jimmy@yen.me.uk">Jimmy Yen</maintainer>
  <license>BSD</license>
  <author email="ivor@iwanders.net">Ivor Wanders</author>
  <author email="jimmy@yen.me.uk">Jimmy Yen</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>socketcan_interface</depend>
  <depend>message_runtime</depend>
  <depend>canfd_msgs</depend>
</package>
