<?xml version="1.0"?>
<package format="2">.
  <name>canfd_msgs</name>
  <version>0.0.1</version>
  <description>CAN/CANFD messages.</description>
  <maintainer email="b98902084@ntu.edu.tw">Bang-Cheng Wang</maintainer>
  <author email="b98902084@ntu.edu.tw">Bang-Cheng Wang</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
